--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,13 @@ button:hover{
 .artist img{
     width:100%;
 }
+@media (max-width: 500px) {
+    .artists-container {
+        flex-direction: column;
+        width: 80%;
+        justify-content: center;
+    }
+    .artists {
+        max-width: 100%;
+    }
+}
